2006-11-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (append_doc): Bug fix for handling empty metadata.

	* data/crude.rda: Rebuilt.

	* data/acq.rda: Rebuilt.

	* inst/doc/textmin.Rnw: Updated vignette to reflect code changes.

	* R/textdoccol.R ([): Bug fix for subsetting a document
	collection's data frame.

2006-11-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Bug fixes in s_filter. Added full query support
	to s_filter.

	* R/textdoccol.R: Local text documents' metadata can now be copied
	to a document collection's data frame with prescind_meta.

2006-11-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Text documents' slot metadata is now accessible in s_filter.

	* R/: Rewrote s_filter function (has still some restrictions).

2006-11-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Various fixes in handling metadata.

	* R/: Added update mechanism for text document collections.

2006-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Merging of document collections now creates a binary tree
	for reconstructing merged document collections.

	* R/: Redesign of metadata for document collections.

2006-11-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Messages now use \code{ngettext}.

2006-11-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Added functions for modifying and removing metadata.

2006-11-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated some documentation.

	* R/: Corrected some connection issues.

	* inst/doc: Worked on the vignette.

2006-10-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/: Added texts and started vignette.

	* R/: Final changes based upon David's comments.

2006-10-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* NAMESPACE: Corrected exports (generic methods need exportMethods
	directives!).

2006-10-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Modified the TextDocCol constructur and various parsers. It