@@ -1,3 +1,15 @@
+2006-11-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textrepo.R: Updated TextRepository (constructor), append_elem,
+	append_meta and remove_meta.
+
+	* R/textdoccol.R: Removed modify_metadata method.
+
+	* R/textrepo.R: Removed modify_metadata method.
+
+	* R/textdoccol.R (remove_meta): Supports removal of document
+	collection metadata and document (= in data frame) metadata.
+
 2006-11-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (append_doc): Bug fix for handling empty metadata.
